Fix adding horizontal scroll

--- a/src/components/main-footer/main-footer.scss
+++ b/src/components/main-footer/main-footer.scss
@@ -18,14 +18,17 @@
   font-size: 16px;
   letter-spacing: 0.01em;
   color: rgba(72, 73, 77, 1);
-  margin-right: -65px;
 }
 
 .main-footer__menu-item {
-  margin-right: 65px;
+  margin-left: 65px;
 
-  &:nth-child(6) {
-    margin-right: 57px;
+  &:first-child {
+    margin-left: 0;
+  }
+
+  &:nth-child(7) {
+    margin-left: 61px;
   }
 }
 
