--- a/src/components/main-page/main-page.scss
+++ b/src/components/main-page/main-page.scss
@@ -15,6 +15,7 @@
                        'tabs tabs';
   column-gap: 57px;
   margin-top: 76px;
+  margin-bottom: 137px;
 }
 
 .page__column {
@@ -27,7 +28,6 @@
 
 .page__tabs {
   grid-area: tabs;
-  margin-bottom: 142px;
 }
 
 .page__title {
