--- a/src/components/site-menu/site-menu.scss
+++ b/src/components/site-menu/site-menu.scss
@@ -11,12 +11,11 @@
   font-size: 16px;
   letter-spacing: 0.01em;
   color: rgba(72, 73, 77, 1);
-  margin-right: -68px;
   padding-top: 10px;
 }
 
 .site-menu__item {
-  margin-right: 68px;
+  margin-left: 68px;
 }
 
 .site-menu__link {
